--- a/my order.html
+++ b/my order.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="text-right">
                     <p>Rs150.00</p>
-                    <p>Items: 2</p>
+                    <p>Items: 1</p>
                     <p>Food Processing</p>
                 </div>
                 <button class="btn btn-outline-primary">Track Order</button>
@@ -78,6 +78,14 @@
                 </div>
                 <button class="btn btn-outline-primary">Track Order</button>
             </div>
+        </div>
+        <div class="container text-center mt-5">
+            <h1>Need Help Ordering?</h1>
+            <p>If you don't know how to order, please click on the button below:</p>
+            <img src="arrow (2).png"width="50px" height="50px"><br>
+            <br>
+
+            <a href="your-link-here" class="btn btn-primary btn-lg custom-button">Click Here for Help</a>
         </div>
     </main>
     <footer class="color">
@@ -118,8 +126,6 @@
         </div>
     </footer>
     
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script></footer>
+
 </body>
 </html>
