adding menu page

--- a/my order.html
+++ b/my order.html
@@ -20,17 +20,13 @@
                         <li class="nav-item"><a class="nav-link" href="#">contact us</a></li>
                     </ul>
                 </div>
-                <div class="navbar-nav">
-                    <a class="nav-link" href="#"><i class="fa fa-search"></i></a>
-                    <a class="nav-link" href="#"><i class="fa fa-shopping-basket"></i></a>
-                    <a class="nav-link" href="#"><i class="fa fa-user"></i></a>
-                </div>
+                 
             </nav>
         </div>
     </header>
     
     <main class="container my-5">
-        <h2><img src="order.jpeg" width="50px" height="50px">My Orders</h2>
+        <h2><img src="order.jpeg" width="50px" height="50px">My Cart</h2>
         <div class="order-card card p-3 mb-3">
             <div class="d-flex justify-content-between">
                 <div >
@@ -43,7 +39,7 @@
                     <p>Food Processing</p>
                 </div>
                 <button class="btn btn-outline-primary">Track Order</button>
-            </div>
+                    </div>
         </div>
     </main>
     <main class="container my-5">
@@ -121,7 +117,7 @@
                 </div>
             </div>
             <div class="text-center mt-3">
-                <p><u>Copyright 2024 © Tomato.com - All Right Reserved.</u></p>
+                <p><u>Copyright 2024 © Tastebud Traveler.com - All Right Reserved.</u></p>
             </div>
         </div>
     </footer>
