changing images and adding hover

--- a/menu.html
+++ b/menu.html
@@ -68,5 +68,31 @@
       <h1>Explore Our Menu</h1>
       <p>Choose from a diverse menu featuring a delectable array of dishes.Our mission is to satisfy your<br>
       cravings and elevate your dining experience , one delicious meal of a time.</p>
-</body>
+
+      <div class="image-container">
+        <img src="sandwich.jpeg" alt="Food" class="circular-image">
+        <h3>&nbsp;&nbsp;&nbsp;Sandwiches</h3>
+    </div>
+    <div class="image-container">
+      <img src="pasta.jpeg" alt="Food" class="circular-image">
+      <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pasta</h3>
+  </div><div class="image-container">
+    <img src="food2.jpg" alt="Food" class="circular-image">
+    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Burger</h3>
+</div><div class="image-container">
+  <img src="cake.jpeg" alt="Food" class="circular-image">
+  <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cakes</h3>
+</div><div class="image-container">
+  <img src="noodle.jpeg" alt="Food" class="circular-image">
+  <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Noodles</h3>
+</div>
+<div class="image-container">
+  <img src="pizza.jpeg" alt="Food" class="circular-image">
+  <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pizza</h3>
+</div>
+<div class="image-container">
+  <img src="momo.jpeg" alt="Food" class="circular-image">
+  <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Momos</h3>
+</div>
+    </body>
 </html>
