--- a/Orders.html
+++ b/Orders.html
@@ -12,7 +12,7 @@
         <input type="email" placeholder="Your email" required>
         <input type="password" placeholder="Password" required>
         <div class="terms">
-            <input type="checkbox" required>
+            <input type="checkbox" required      
             <label>By continuing, I agree to the terms of use & privacy policy.</label>
         </div>
         <button>Create account</button>
