--- a/menu.html
+++ b/menu.html
@@ -37,7 +37,7 @@
                 <a class="nav-link">Contact us</a>
               </li>
               <li class="nav-link">
-                <a href="my order.html">My Cart
+                <a href="order.html">My Cart
                   </a>
                 
               </li>
