--- a/order.html
+++ b/order.html
@@ -1,139 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My cart</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <title>Checkout Page</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="order.css">
 </head>
-
 <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">FoodHouse</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
-
-    <div class="d-flex justify-content-around">
-        <div class="card mt-5 ms-2" style="width: 18rem;">
-            <img src="pizza.jpeg"
-                class="card-img-top" alt="">
-            <h1 class="card-title">Pizza</h1>
-            <p class="card-text">Eat Me and get unhealthy</p>
-            <p class="card-text">Rs299.00</p>
-            <a class="btn btn-danger" href="track.html">Track order</a>
-        </div>
-        <div class="card mt-5 ms-2" style="width: 18rem;">
-            <img src="burgers.jpeg"
-                class="card-img-top" alt="">
-            <h1 class="card-title">Burger</h1>
-            <p class="card-text">Eat Me and get unhealthy</p>
-            <p class="card-text">Rs150.00</p>
-            <a class="btn btn-danger" href="track.html">Track order</a>
-        </div>
-        <div class="card mt-5 ms-2" style="width: 18rem;">
-            <img src="pasta.jpeg"
-                class="card-img-top" alt="">
-            <h1 class="card-title">Pasta</h1>
-            <p class="card-text">Eat Me and get unhealthy</p>
-            <p class="card-text">Rs240.00</p>
-            <a class="btn btn-danger" href="track.html">Track order</a>
-        </div>
-        <div class="card mt-5 ms-2" style="width: 18rem;">
-            <img src="momo.jpeg"
-                class="card-img-top" alt="" >
-            <h1 class="card-title">Momos</h1>
-            <p class="card-text">Eat Me and get unhealthy</p>
-            <p class="card-text">Rs100.00</p>
-            <a class="btn btn-danger" href="track.html">Track order</a>
-        </div>
-    </div>
-    </div>
-
-    <div class="container2">
-
-    <div class="container my-5">
+    <h1 class="heading">It's my cart</h1>
+    <div class="container mt-5">
         <div class="row">
-            <div class="col-md-8 offset-md-2">
-                <div class="card">
-                    <div class="card-header text-center bg-danger text-white">
-                        <h3>Payment Summary</h3>
+            <div class="col-md-8">
+                <div class="card p-4 shadow">
+                    <h5>Select delivery address</h5>
+                    <p class="text-muted">You have a saved address in this location</p>
+
+                    <div class="saved-address card p-3 mb-3 border-left-primary">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h6>Home</h6>
+                                <p>Flat, Block A1, 2nd Floor, 4BR, Preet colony, Punjab 140507, India</p>
+                                <span class="text-muted">47 MINS</span>
+                            </div>
+                            <div>
+                                <button class="btn btn-success">DELIVER HERE</button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Order Details</h5>
-                        <table class="table table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>Item</th>
-                                    <th>Quantity</th>
-                                    <th>Price</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Pasta</td>
-                                    <td>2</td>
-                                    <td>Rs220.00</td>
-                                </tr>
-                                <tr>
-                                    <td>Burger</td>
-                                    <td>1</td>
-                                    <td>Rs150.00</td>
-                                </tr>
-                                <tr>
-                                    <td>Momo</td>
-                                    <td>1</td>
-                                    <td>Rs50.00</td>
-                                </tr>
-                                <tr>
-                                    <td>Pizza</td>
-                                    <td>1</td>
-                                    <td>Rs450.00</td>
-                                </tr>
-                            </tbody>
-                            <tfoot>
-                                <tr>
-                                    <th colspan="2">Total</th>
-                                    <th>Rs870.00</th>
-                                </tr>
-                            </tfoot>
-                        </table>
-                        <div class="text-center mt-4">
-                            <button class="btn btn-danger ">Proceed To Payment</button>
+
+                    <div class="add-new-address card p-3 border-left-secondary">
+                        <div class="d-flex align-items-center">
+                            <div class="me-3">
+                                <img src="icons8-location-48.png" alt="Location Icon" height="35px">
+                            </div>
+                            <div>
+                                <h6>Add New Address</h6>
+                                <p> Preet colony,Punjab 140507, India</p>
+                                <button class="btn btn-outline-primary"><a href="address.html">ADD NEW</a></button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div></div>
-</body>
 
+            <div class="col-md-4">
+                <div class="card p-4 shadow">
+                    <img src="pizza.jpeg" width="85px" height="50px">
+                    <h5>Tastebud</h5>
+                    <p>Punjab</p>
+
+                    <ul class="list-group mb-3">
+                        <li class="list-group-item d-flex justify-content-between">
+                            <div>
+                                <h6>Burger <small>(Cheesy)</small></h6>
+                            </div>
+                            <span>₹749</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between">
+                            <div>
+                                <h6>Pizza <small>(Thin base)</small></h6>
+                            </div>
+                            <span>₹749</span>
+                        </li>
+                    </ul>
+
+                    <div class="form-check mb-3">
+                        <input class="form-check-input" type="checkbox" value="" id="noContactDelivery">
+                        <label class="form-check-label" for="noContactDelivery">
+                            Opt in for No-contact Delivery
+                        </label>
+                        <p class="text-muted small">Unwell, or avoiding contact? Please select no-contact delivery. Partner will safely place the order outside your door </p>
+                    </div>
+
+                    <div class="mb-3">
+                        <button class="btn btn-outline-primary w-100"><a href="track.html">Track Order</a></button>
+                    </div>
+
+                    <div class="d-flex justify-content-between">
+                        <h6>TO PAY</h6>
+                        <span>₹1498</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
