--- a/footer.html
+++ b/footer.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="footer.css">
 	<link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
     <title>Tastebud Traveller</title>	
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-                <img src="logo"><strong class="food">Tastebud Traveller</strong>
+                <strong>Tastebud Traveller</strong>
                 <p>Lorem ipsum dolor sit amet consectetur. Amet risus rhoncus sodales vulputate arcu.
                  Erat mi dolor vitae in. Consequat pellentesque sed vitae purus erat id in pretium. Sed cras fringilla lacinia tortor diam pretium.</p>
             </div>
@@ -27,10 +27,11 @@
               <h3>Quick Links</h3>
                <ul>
                 <li><a href="#">About us</a></li>
-                <li><a href="#">services</a></li>
+                <li><a href="#">Menu</a></li>
                 <li><a href="#">login</a></li>
-                <li><a href="#">calculator</a></li>
-                <li><a href="#">Nutrition</a></li
+                <li><a href="#">My Cart</a></li>
+                <li><a href="#">Mobile app</a></li>
+                <li><a href="#">Contact Us</a></li
              </ul>
             </div>
             
@@ -65,4 +66,5 @@
         </div>
     </div>
 </div>
-<!--footer-bottom-->
+</body>
+</html>
