--- a/Login.html
+++ b/Login.html
@@ -13,7 +13,8 @@
         </div>
         <h1>Order and receive your food</h1>
         <p>Order food and get delivery within a few minutes to your door</p>
-        <button class="get-started-button">Get Started</button>
+        <button class="get-started-button"><a href="Get started.html">Get Started</a></button>
+
     </div>
 </body>
 </html>
