--- a/More information.html
+++ b/More information.html
@@ -3,61 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delivery & Pickup Service</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Help and Support</title>
     <link rel="stylesheet" href="More information.css">
 </head>
 <body>
+    
     <div class="container">
-        <div class="row align-items-center">
-            <div class="col-md-6">
-                <h1 class="display-4"><span class="text-highlight">Fastest</span> Delivery & <br><span class="text-highlight">Easy</span> Pickup</h1>
-                <p class="lead">When you are too lazy to cook, we are just a click away!</p>
-                <div class="d-flex align-items-center mt-4">
-                    <button class="btn btn-success me-3">Find Restaurants</button>
-                    <button class="btn btn-outline-secondary">How to order</button>
-                </div>
-                <div class="mt-5">
-                    <div class="d-flex align-items-start">
-                        <i class="bi bi-bicycle fs-2 text-primary me-3"></i>
-                        <div>
-                            <h5>Fast delivery</h5>
-                            <p>Promise to deliver within 30 mins</p>
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-start mt-4">
-                        <i class="bi bi-box-seam fs-2 text-primary me-3"></i>
-                        <div>
-                            <h5>Pick up</h5>
-                            <p>Pickup delivery at your doorstep</p>
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-start mt-4">
-                        <i class="bi bi-person fs-2 text-primary me-3"></i>
-                        <div>
-                            <h5>Dine in</h5>
-                            <p>Enjoy your food fresh, crispy, and hot</p>
-                        </div>
-                    </div>
-                </div>
+        <div class="header">
+            <h1>Help and Support</h1>
+        </div>
+
+        <div class="content">
+            <div class="left-panel">
+                <h2>Quick tasks</h2>
+                <ul>
+                    <li><a href="#">Run assistant to automatically solve any connection problems</a></li>
+                    <li><a href="#">How do I upgrade my plan?</a></li>
+                    <li><a href="#">See manuals and common procedures</a></li>
+                    <li><a href="#">See our product emulators</a></li>
+                    <li><a href="#">How do I check my coverage?</a></li>
+                </ul>
+
+                <h2>Contact us</h2>
+                <p><strong>Chat with a Customer Specialist</strong></p>
+                <button>Chat now</button>
+                <p>Get in touch, free of charge: Just call <strong>1-800-123-4567</strong>.</p>
+                <p>Customer representatives are available from 3 a.m. to 10 p.m., daily.</p>
             </div>
-            <div class="col-md-6 text-center">
-                <img src="girl eating.png" alt="Girl eating" class="img-fluid rounded-circle">
+
+            <div class="right-panel">
+                <h2>Support details</h2>
+                <p><strong>Subscriber info</strong></p>
+                <p>SIM ICCID: 3546723957237557327529</p>
+                <p>IMSI: 3397343974235972353</p>
+
+                <p><strong>Home Provider</strong></p>
+                <p>Network name: Contoso</p>
+                <p>Network ID: 33429</p>
+                <p>Register state: Home</p>
+
+                <p><strong>Device hardware information</strong></p>
+                <p>Manufacturer: Fabrikam</p>
+                <p>Model: GTM816W</p>
+                <p>Device ID: 09863473477566332</p>
+                <p>Firmware version: 19.2.0</p>
+                <p>Cellular class: GSM</p>
+                <p>Ready state: initialized</p>
+
+                <p><strong>Network interface</strong></p>
+                <p>Name: Deluxe T30 - Network Interface</p>
+                <p>Driver version: 5.1.380</p>
             </div>
         </div>
     </div>
-
-    <div class="app-section bg-light py-5">
-        <div class="container text-center">
-            <h2>Download our Mobile App</h2>
-            <div class="d-flex justify-content-center mt-4">
-                <a href="#" class="btn btn-primary mx-2"><i class="bi bi-apple"></i> App Store</a>
-                <a href="#" class="btn btn-primary mx-2"><i class="bi bi-google-play"></i> Google Play</a>
-            </div>
-        </div>
-    </div>
-   
-
- 
 </body>
 </html>
