--- a/paymentsuccessful.html
+++ b/paymentsuccessful.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
 <body>
     <div class="container">
         <div class="success-icon">
-            <img src="success-icon.png" alt="Success">
+            <img src="success.jpg" alt="Success">
         </div>
         <h1>Payment Successful!</h1>
         <p>Thank you for your payment. Your transaction has been completed successfully.</p>
