--- a/menu2.html
+++ b/menu2.html
@@ -23,7 +23,7 @@
             <button>Add To Cart</button>
         </div>
 </div>
-
+<!-- menu2 -->
 <div class="food-items">
     <img src="cake.jpeg" >
     <div class="details">
